--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build-babel": "babel src/server --out-dir build/server",
     "start": "babel-node build/server/route/index.js",
     "build": "webpack --color -p",
-    "dev": "webpack-dev-server",
+    "dev": "webpack-dev-server --no-inline",
     "express": "babel src/server --out-dir build/server && babel-node build/server/route/index.js"
   },
   "repository": {
@@ -29,18 +29,21 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "^6.23.0",
+    "body-parser": "^1.17.2",
     "css-loader": "^0.28.4",
     "ejs": "^2.5.6",
     "ejs-compiled-loader": "^1.1.0",
     "es6-promise": "^4.1.0",
     "express": "^4.15.3",
     "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.2",
     "glob": "^7.1.2",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "log4js": "^1.1.1",
     "material-ui": "^0.18.3",
     "mongodb": "^2.2.28",
+    "multer": "^1.3.0",
     "node-sass": "^4.5.3",
     "path": "^0.12.7",
     "postcss-loader": "^2.0.5",
