--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "glob": "^7.1.2",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
+    "lodash": "^4.17.4",
     "log4js": "^1.1.1",
     "material-ui": "^0.18.3",
     "mongodb": "^2.2.28",
