--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "path": "^0.12.7",
     "postcss-loader": "^2.0.5",
     "react": "^15.5.4",
+    "react-contenteditable": "^2.0.2",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
     "redux": "^3.6.0",
