--- a/src/server/json/594b9a26aa575040adba84ad.yaml
+++ b/src/server/json/594b9a26aa575040adba84ad.yaml
@@ -24,3 +24,49 @@ paths:
                 firstname:
                   type: string
       parameters:
+  /get/{id}:
+    get:
+      summary: 第一个接口
+      description: 子服务：com.qunhe.service.hello;<br> 这里是描述
+      responses:
+        200:
+          description: A list of test
+          schema:
+            type: array
+            items:
+              required:
+                - username
+              properties:
+                username:
+                  type: string
+                firstname:
+                  type: string
+      parameters:
+      - name: id
+        in: path
+        description: ID列表
+        type: Array
+        required: true
+      - name: num
+        in: query
+        description: 数量
+        type: Number
+        required: true
+  /api/get:
+    put:
+      summary: 第二个接口
+      description: 子服务：com.qunhe.service.hello;<br> path别用数组
+      responses:
+        200:
+          description: A list of test
+          schema:
+            type: array
+            items:
+              required:
+                - username
+              properties:
+                username:
+                  type: string
+                firstname:
+                  type: string
+      parameters:
