--- a/package.json
+++ b/package.json
@@ -35,16 +35,19 @@
     "ejs-compiled-loader": "^1.1.0",
     "es6-promise": "^4.1.0",
     "express": "^4.15.3",
+    "express-session": "^1.15.3",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.2",
     "glob": "^7.1.2",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
+    "ldapjs": "^1.0.1",
     "lodash": "^4.17.4",
     "log4js": "^1.1.1",
     "material-ui": "^0.18.3",
     "mongodb": "^2.2.28",
     "multer": "^1.3.0",
+    "node-fetch": "^1.7.1",
     "node-sass": "^4.5.3",
     "path": "^0.12.7",
     "postcss-loader": "^2.0.5",
@@ -58,8 +61,7 @@
     "style-loader": "^0.18.2",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5",
-    "yaml-to-json": "^0.3.0",
-    "yamljs": "^0.2.10"
+    "yaml-to-json": "^0.3.0"
   },
   "bugs": {
     "url": "https://github.com/cryzzchen/mock-server/issues"
